# bili-dl

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/bili_dl/: __init__.py  __main__.py  cli.py  config.py  cookies.py  cookiesource.py  cookiestore.py  downloader.py  ffmpeg.py  paths.py  settings.py  ui.py
tests/: test_cli.py  test_cookies.py  test_cookiesource.py  test_cookiestore.py  test_downloader.py  test_ffmpeg.py  test_package.py  test_paths.py  test_settings.py  test_ui.py
tests/data/: sample_cookies_all.txt
